test/syc/good/initsa.c
/*
 * Initialization of structure containing arrays
 */

struct s {
	int x[2];
	int y[2];
};

struct s a = { { 1, 2 }, { 3, 4 } };
