test/syc/bad/unionredef.c
/*
 * Redefinition of 'union foo'
 */

union foo {
	int x;
	int y;
} f;

union foo {
	int x;
	int y;
} g;